--- a/GdsComponents/GdsInputDate.razor
+++ b/GdsComponents/GdsInputDate.razor
@@ -11,7 +11,7 @@
 
             @if (Hint != null)
             {
-                <Hint Id="@_hintId">@Hint</Hint>
+                <GdsHint Id="@_hintId">@Hint</GdsHint>
             }
 
             @if (_errorMessage != null)
@@ -24,19 +24,19 @@
             <div class="govuk-date-input" id="@Id">
                 <div class="govuk-date-input__item">
                     <div class="govuk-form-group">
-                        <Label For="@_dayId" Text="Day" CssClass="govuk-label govuk-date-input__label" />
+                        <GdsLabel For="@_dayId" AdditionalCssClasses="govuk-date-input__label" Text="Day" />
                         <Microsoft.AspNetCore.Components.Forms.InputText id="@_dayId" @bind-Value="Date.DayText" autocomplete="@_dayAutocomplete" inputmode="numeric" class="@_dayCssClass" />
                     </div>
                 </div>
                 <div class="govuk-date-input__item">
                     <div class="govuk-form-group">
-                        <Label For="@_monthId" Text="Month" CssClass="govuk-label govuk-date-input__label" />
+                        <GdsLabel For="@_monthId" AdditionalCssClasses="govuk-date-input__label" Text="Month" />
                         <Microsoft.AspNetCore.Components.Forms.InputText id="@_monthId" @bind-Value="Date.MonthText" autocomplete="@_monthAutocomplete" inputmode="numeric" class="@_monthCssClass" />
                     </div>
                 </div>
                 <div class="govuk-date-input__item">
                     <div class="govuk-form-group">
-                        <Label For="@_yearId" Text="Year" CssClass="govuk-label govuk-date-input__label" />
+                        <GdsLabel For="@_yearId" AdditionalCssClasses="govuk-date-input__label" Text="Year" />
                         <Microsoft.AspNetCore.Components.Forms.InputText id="@_yearId" @bind-Value="Date.YearText" autocomplete="@_yearAutocomplete" inputmode="numeric" class="@_yearCssClass" />
                     </div>
                 </div>
