Fixed GDS asset path for use with this Razor class library

--- a/GdsComponents/Scripts/gds.scss
+++ b/GdsComponents/Scripts/gds.scss
@@ -8,7 +8,7 @@ $govuk-footer-crest-image-height-2x: $govuk-footer-crest-image-height * 2;
 $copyright-image: "/images/copyright.webp";
 $copyright-retina-image: "/images/copyright-x2.webp";
 
-$govuk-assets-path: "/";
+$govuk-assets-path: "/_content/DorsetCouncil.FloodOnlineReportingTool.GdsComponents/";
 
 @import "govuk-frontend/dist/govuk";
 
