Setup project for Dorset-Council-UK NuGet

--- a/GdsBlazorComponents/Scripts/gds.scss
+++ b/GdsBlazorComponents/Scripts/gds.scss
@@ -1,5 +1,5 @@
 ﻿$govuk-new-typography-scale: true;
-$govuk-assets-path: "/_content/DorsetCouncil.GdsBlazorComponents/";
+$govuk-assets-path: "/_content/Dorset-Council-UK.GdsBlazorComponents/";
 
 // Use our image for the copyright notice
 $govuk-footer-crest-image-width: 188px;
