--- a/GdsBlazorComponents/GdsFieldsetGroup.razor
+++ b/GdsBlazorComponents/GdsFieldsetGroup.razor
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNetCore.Components.Forms
-<fieldset class="govuk-fieldset" role="group" aria-describedby="@_describedBy">
+﻿<fieldset class="govuk-fieldset" role="group" aria-describedby="@_describedBy">
     @if (Heading != null)
     {
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
