--- a/GdsBlazorComponents/GdsInputText.razor
+++ b/GdsBlazorComponents/GdsInputText.razor
@@ -1,4 +1,4 @@
-﻿@inherits Microsoft.AspNetCore.Components.Forms.InputText
+﻿@inherits InputText
 
 <input id="@Id" name="@NameAttributeValue" @attributes="AdditionalAttributes" class="@CssClass" @bind-Value="CurrentValueAsString" @bind-Value:event="oninput" />
 
