--- a/GdsBlazorComponents/GdsSkipLink.razor
+++ b/GdsBlazorComponents/GdsSkipLink.razor
@@ -4,6 +4,6 @@
     [Parameter, EditorRequired]
     public string Href { get; set; }
 
-    [Parameter, EditorRequired]
-    public string Text { get; set; }
+    [Parameter]
+    public string Text { get; set; } = "Skip to main content";
 }
