--- a/GdsBlazorComponents/GdsFileInput.razor
+++ b/GdsBlazorComponents/GdsFileInput.razor
@@ -5,7 +5,7 @@
     <label class="govuk-label" for="@Id">
         @Label
     </label>
-    @if(_errorMessage != null)
+    @if(ShowErrorOnComponent && _errorMessage != null)
     {
         <p id="@_errorId" class="govuk-error-message">
             <span class="govuk-visually-hidden">Error:</span> @_errorMessage
