--- a/GdsBlazorComponents/GdsInsetText.razor
+++ b/GdsBlazorComponents/GdsInsetText.razor
@@ -1,6 +1,6 @@
 <div class="govuk-inset-text">@Text</div>
 
 @code {
-    [Parameter]
-    public required string Text { get; set; } = "";
+    [Parameter, EditorRequired]
+    public required string Text { get; set; }
 }
