Make Href param required and fix npm script name

--- a/GdsBlazorComponents/GdsHeaderNavLink.razor
+++ b/GdsBlazorComponents/GdsHeaderNavLink.razor
@@ -10,7 +10,7 @@
 </li>
 
 @code {
-    [Parameter]
+    [Parameter, EditorRequired]
     public string Href { get; set; } = string.Empty;
 
     [Parameter]
