--- a/GdsBlazorComponents/Scripts/gds.scss
+++ b/GdsBlazorComponents/Scripts/gds.scss
@@ -2,30 +2,30 @@
 $govuk-font-family: arial, sans-serif;
 $govuk-assets-path: "/_content/Dorset-Council-UK.GdsBlazorComponents/";
 
-@import "govuk-frontend/dist/govuk";
+@use "govuk-frontend/dist/govuk";
 
 // Colour variables to help with user styling
 :root {
-    --govuk-frontend-color-red: #{govuk-colour("red")};
-    --govuk-frontend-color-yellow: #{govuk-colour("yellow")};
-    --govuk-frontend-color-green: #{govuk-colour("green")};
-    --govuk-frontend-color-blue: #{govuk-colour("blue")};
-    --govuk-frontend-color-dark-blue: #{govuk-colour("dark-blue")};
-    --govuk-frontend-color-light-blue: #{govuk-colour("light-blue")};
-    --govuk-frontend-color-purple: #{govuk-colour("purple")};
-    --govuk-frontend-color-black: #{govuk-colour("black")};
-    --govuk-frontend-color-dark-grey: #{govuk-colour("dark-grey")};
-    --govuk-frontend-color-mid-grey: #{govuk-colour("mid-grey")};
-    --govuk-frontend-color-light-grey: #{govuk-colour("light-grey")};
-    --govuk-frontend-color-white: #{govuk-colour("white")};
-    --govuk-frontend-color-light-purple: #{govuk-colour("light-purple")};
-    --govuk-frontend-color-bright-purple: #{govuk-colour("bright-purple")};
-    --govuk-frontend-color-pink: #{govuk-colour("pink")};
-    --govuk-frontend-color-light-pink: #{govuk-colour("light-pink")};
-    --govuk-frontend-color-orange: #{govuk-colour("orange")};
-    --govuk-frontend-color-brown: #{govuk-colour("brown")};
-    --govuk-frontend-color-light-green: #{govuk-colour("light-green")};
-    --govuk-frontend-color-turquoise: #{govuk-colour("turquoise")};
+    --govuk-frontend-color-red: #{govuk.govuk-colour("red")};
+    --govuk-frontend-color-yellow: #{govuk.govuk-colour("yellow")};
+    --govuk-frontend-color-green: #{govuk.govuk-colour("green")};
+    --govuk-frontend-color-blue: #{govuk.govuk-colour("blue")};
+    --govuk-frontend-color-dark-blue: #{govuk.govuk-colour("dark-blue")};
+    --govuk-frontend-color-light-blue: #{govuk.govuk-colour("light-blue")};
+    --govuk-frontend-color-purple: #{govuk.govuk-colour("purple")};
+    --govuk-frontend-color-black: #{govuk.govuk-colour("black")};
+    --govuk-frontend-color-dark-grey: #{govuk.govuk-colour("dark-grey")};
+    --govuk-frontend-color-mid-grey: #{govuk.govuk-colour("mid-grey")};
+    --govuk-frontend-color-light-grey: #{govuk.govuk-colour("light-grey")};
+    --govuk-frontend-color-white: #{govuk.govuk-colour("white")};
+    --govuk-frontend-color-light-purple: #{govuk.govuk-colour("light-purple")};
+    --govuk-frontend-color-bright-purple: #{govuk.govuk-colour("bright-purple")};
+    --govuk-frontend-color-pink: #{govuk.govuk-colour("pink")};
+    --govuk-frontend-color-light-pink: #{govuk.govuk-colour("light-pink")};
+    --govuk-frontend-color-orange: #{govuk.govuk-colour("orange")};
+    --govuk-frontend-color-brown: #{govuk.govuk-colour("brown")};
+    --govuk-frontend-color-light-green: #{govuk.govuk-colour("light-green")};
+    --govuk-frontend-color-turquoise: #{govuk.govuk-colour("turquoise")};
 }
 
 //make sure header navigation is right aligned
@@ -36,25 +36,25 @@ $govuk-assets-path: "/_content/Dorset-Council-UK.GdsBlazorComponents/";
 // Make GDS errors without links look like errors
 .govuk-error-summary__list {
     li {
-        @include govuk-typography-weight-bold;
-        color: govuk-colour("red");
+        @include govuk.govuk-typography-weight-bold();
+        color: govuk.govuk-colour("red");
     }
 }
 
 // related content section
 section.related-navigation, .related-navigation {
-    border-top: 2px solid govuk-colour("blue");
+    border-top: 2px solid govuk.govuk-colour("blue");
 
     @media print {
         display: none !important;
     }
 
-    @media #{govuk-from-breakpoint(tablet)} {
+    @media #{govuk.govuk-from-breakpoint(tablet)} {
         padding: 0;
     }
 
     h2, h3, h4 {
-        margin-top: govuk-spacing(3);
+        margin-top: govuk.govuk-spacing(3);
     }
 }
 
@@ -84,23 +84,23 @@ section.related-navigation, .related-navigation {
     .govuk-footer {
         background-color: $dorset-colour-footer;
         border-top: 1px solid $dorset-colour-footer;
-        color: govuk-colour("white");
+        color: govuk.govuk-colour("white");
 
         .govuk-footer__meta {
             justify-content: flex-start;
         }
 
         .govuk-footer__heading {
-            color: govuk-colour("white");
-            border-bottom-color: govuk-colour("white");
+            color: govuk.govuk-colour("white");
+            border-bottom-color: govuk.govuk-colour("white");
         }
 
         .govuk-footer__section-break {
-            border-bottom-color: govuk-colour("white");
+            border-bottom-color: govuk.govuk-colour("white");
         }
 
         .govuk-footer__link {
-            @include govuk-link-style-inverse;
+            @include govuk.govuk-link-style-inverse();
         }
     }
 }
