--- a/GdsBlazorComponents/GdsHeader.razor
+++ b/GdsBlazorComponents/GdsHeader.razor
@@ -10,8 +10,8 @@
         {
             <div class="govuk-header__content">
                 <nav aria-label="Menu" class="govuk-header__navigation">
-                    <button type="button" class="govuk-header__menu-button govuk-js-header-toggle" aria-controls="@_navigationId" aria-label="Show or hide menu" aria-expanded="false">Menu</button>
-                    <ul id="@_navigationId" class="govuk-header__navigation-list">
+                    <button type="button" class="govuk-header__menu-button govuk-js-header-toggle" aria-controls="navigation" aria-label="Show or hide menu" aria-expanded="false">Menu</button>
+                    <ul id="navigation" class="govuk-header__navigation-list">
                         @NavLinks
                     </ul>
                 </nav>
@@ -32,6 +32,4 @@
 
     [Parameter]
     public RenderFragment? NavLinks { get; set; }
-
-    private string _navigationId = $"navigation-{Guid.NewGuid()}";
 }
